<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SettingsTransportLift" Id="{cad671c8-daf9-4539-9908-38693c7e494e}">
    <Declaration><![CDATA[TYPE ST_SettingsTransportLift :
STRUCT
	//Lift
	//--stLiftSpeedProfileHoming : ST_SpeedProfile;
	stLiftSpeedProfileJogging : ST_SpeedProfile;
	stLiftSpeedProfilePositioning : ST_SpeedProfile;   
	
	//--stLiftIdle : ST_PositioningProfile;
	//--stLiftPrePickTrolleyInTB : ST_PositioningProfile; 
	//--stLiftPickTrolleyInTB : ST_PositioningProfile;
	//--stLiftRaiseTrolleyInTB : ST_PositioningProfile;
	//--stLiftPrePlaceTrolleyInCabin : ST_PositioningProfile;
	//--stLiftPlaceTrolleyInCabin : ST_PositioningProfile;
	//--stLiftPrePickTrolleyInCabin : ST_PositioningProfile;
	//--stLiftPickTrolleyInCabin : ST_PositioningProfile;
	//--stLiftRaiseTrolleyInCabin : ST_PositioningProfile;
	//--stLiftPrePlaceTrolleyInTB : ST_PositioningProfile;
	//--stLiftPlaceTrolleyInTB : ST_PositioningProfile;
	
	arr_PositioningProfileLift : ARRAY[0..10] OF ST_PositioningProfile;
	arr_PositioningProfileTransport : ARRAY[0..5] OF ST_PositioningProfile;	
	
	stTransportUnitSpeedProfileHoming : ST_SpeedProfile;
	stTransportUintSpeedProfileJogging : ST_SpeedProfile;
	stTransportSpeedProfilePositioning : ST_SpeedProfile;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>